--- a/src/app/instrutor-teorico/instrutor-teorico.component.scss
+++ b/src/app/instrutor-teorico/instrutor-teorico.component.scss
@@ -44,6 +44,10 @@ button {
   box-shadow: none;
 }
 
+.button-table {
+  padding-left: 9%;
+}
+
 .w-25 {
   width: 25px;
 }
@@ -61,10 +65,6 @@ button {
   color: gray;
 }
 .mat-form-field {
-  padding-left: 10%;
-}
-
-.buttons{
   padding-left: 10%;
 }
 
