--- a/src/app/instrutor-teorico/instrutor-teorico.component.html
+++ b/src/app/instrutor-teorico/instrutor-teorico.component.html
@@ -1,5 +1,7 @@
-  <div class="mat-elevation-z8 data-table" *ngIf="this.instructor.type == 'Teórico' || this.instructor.type == 'Ambos'">
-    <h4>Instrutor: {{this.instructor.name}} - Aulas Teóricas</h4>
+<h3>Aulas Cadastradas por Instrutor</h3>
+
+<div class="mat-elevation-z8 data-table" *ngIf="this.instructor.type == 'Teórico' || this.instructor.type == 'Ambos'">
+    <h4>{{this.instructor.name}} - Aulas Teóricas</h4>
 
     <table mat-table matSort class="table" [dataSource]="dataSourceT">
       <ng-container matColumnDef="count">
@@ -8,7 +10,7 @@
         </td>
       </ng-container>
       <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Data </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header > Data </th>
         <td mat-cell *matCellDef="let instructorClass" class="gray-element"> {{instructorClass.date  | date: 'dd/MM/yyyy'}} </td>
       </ng-container>
       <ng-container matColumnDef="check">
@@ -30,7 +32,7 @@
 </div>
 
 <div class="mat-elevation-z8 data-table" *ngIf="this.instructor.type == 'Prático' || this.instructor.type == 'Ambos'">
-  <h4>Instrutor: {{this.instructor.name}} - Aulas Práticas</h4>
+  <h4>{{this.instructor.name}} - Aulas Práticas</h4>
 
   <table mat-table matSort class="table" [dataSource]="dataSourceP">
     <ng-container matColumnDef="count">
@@ -67,17 +69,17 @@
     <tr>
       <td>
         <div>
-          <button mat-raised-button color="primary" type="submit" (click)="openDialog(this.instructor)" class="button">Adicionar nova aula</button>
+          <button mat-flat-button style="background-color: #FFD700;" type="submit" (click)="openDialog(this.instructor)" class="button">Adicionar nova aula</button>
         </div>
       </td>
       <td>
         <div>
-          <button mat-raised-button color="primary" type="submit" (click)="openDialog(this.instructor)" class="button">Atualizar checks</button>
+          <button mat-flat-button style="background-color: #FFD700;" type="submit" (click)="updateCheck()" class="button">Atualizar checks</button>
         </div>
       </td>
       <td>
         <div>
-          <button mat-raised-button color="primary" type="submit" (click)="openDialog(this.instructor)" class="button">Excluir Aulas</button>
+          <button mat-flat-button color="warn" type="submit" (click)="openDialog(this.instructor)" class="button">Excluir Aulas</button>
         </div>
       </td>
     </tr>
