--- a/src/app/instrutor-teorico/instrutor-teorico.component.scss
+++ b/src/app/instrutor-teorico/instrutor-teorico.component.scss
@@ -12,6 +12,10 @@ h3 {
   box-shadow: 2px 2px 2px rgba(0,0,0,.05);
 }
 
+td{
+  padding-right: 10px;
+}
+
 .content{
   padding-top: 20px;
   position: relative;
@@ -21,11 +25,12 @@ h3 {
   margin-right: 15px;
   margin-left: 15px;
 }
-.mat-raised-button {
-  background-color: #FFD700;
-  color: #000;
-  margin-left: 10%;
-  margin-top: 30px;
+.mat-flat-button {
+  transition: transform .4s;
+}
+
+.mat-flat-button:hover {
+  transform: scale(1.1);
 }
 .mat-form-field {
   padding-left: 10%;
@@ -45,7 +50,7 @@ button {
 }
 
 .button-table {
-  padding-left: 9%;
+  padding-left: 10%;
 }
 
 .w-25 {
