--- a/src/app/instrutor-teorico/instrutor-teorico.component.html
+++ b/src/app/instrutor-teorico/instrutor-teorico.component.html
@@ -79,7 +79,7 @@
       </td>
       <td>
         <div>
-          <button mat-flat-button color="warn" type="submit" (click)="openDialog(this.instructor)" class="button">Excluir Aulas</button>
+          <button mat-flat-button color="warn" type="submit" (click)="openDeleteDialog(this.deleteItems)" class="button">Excluir Aulas</button>
         </div>
       </td>
     </tr>
