--- a/src/app/admin-funcionarios/admin-funcionarios.component.html
+++ b/src/app/admin-funcionarios/admin-funcionarios.component.html
@@ -37,4 +37,4 @@
   </table>
 </div>
 
-<button mat-raised-button color="primary" (click)="openDialog(employee)" class="button">Adicionar novo instrutor</button>
+<button mat-raised-button color="primary" (click)="openDialog(employee)" class="button">Adicionar novo funcionário</button>
