--- a/src/app/dialog-box/dialog-box.component.html
+++ b/src/app/dialog-box/dialog-box.component.html
@@ -2,27 +2,11 @@
     <h1 mat-dialog-title>Atualizar aulas da matéria</h1>
     <div mat-dialog-content>
       <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
-        <input *ngIf="index == 0" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.subjects.defensiveDriving">
-        <input *ngIf="index == 1" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.subjects.legislation">
-        <input *ngIf="index == 2" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.subjects.mechanics">
-        <input *ngIf="index == 3" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.subjects.environment">
-        <input *ngIf="index == 4" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.subjects.firstAid">
-      </mat-form-field>
-      <!-- <ng-template #elseTemplate>
-        Sure to delete <b>{{local_data.obj.name}}</b>?
-      </ng-template> -->
-    </div>
-    <div mat-dialog-actions>
-      <button mat-button (click)="doAction()" mat-flat-button color="warn">Atualizar</button>
-      <button mat-button (click)="closeDialog()">Cancelar</button>
-    </div>
-</div>
-
-<div *ngIf="type == 'School'">
-    <h1 mat-dialog-title>Criar nova franquia</h1>
-    <div mat-dialog-content>
-      <mat-form-field *ngIf="action != 'Delete'; else elseTemplate">
-        <input placeholder="Nome da franquia" matInput>
+        <input *ngIf="index == 0" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.defensiveDriving">
+        <input *ngIf="index == 1" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.legislation">
+        <input *ngIf="index == 2" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.mechanics">
+        <input *ngIf="index == 3" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.environment">
+        <input *ngIf="index == 4" placeholder="Atualizar aulas" matInput [(ngModel)]="obj.firstAid">
       </mat-form-field>
       <!-- <ng-template #elseTemplate>
         Sure to delete <b>{{local_data.obj.name}}</b>?
