--- a/src/app/admin-classes/admin-classes.component.html
+++ b/src/app/admin-classes/admin-classes.component.html
@@ -1,53 +1,53 @@
 <div>
     <h2>Turmas</h2>
-
-    <div fxLayout fxLayoutAlign="center center">
-        <mat-form-field fxFlex="40%">
-          <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filtrar Turma">
-        </mat-form-field>
-    </div>
-    
     <div class="mat-elevation-z8 data-table">
         <table mat-table matSort class="table" [dataSource]="dataSource">
             <ng-container matColumnDef="N°">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> N° </th>
-                <td mat-cell *matCellDef="let student"> {{classes.seqNo}} </td>
+                <td mat-cell *matCellDef="let classes"> {{classes.seq}} </td>
             </ng-container>
-        
+
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
-                <td mat-cell *matCellDef="let student"> {{classes.name}} </td>
+                <td mat-cell *matCellDef="let classes"> {{classes.name}} </td>
             </ng-container>
-        
+
             <ng-container matColumnDef="shift">
                 <th mat-header-cell *matHeaderCellDef> Turno </th>
-                <td mat-cell *matCellDef="let cls"> {{classes.shift}} </td>
+                <td mat-cell *matCellDef="let classes"> {{classes.shift}} </td>
             </ng-container>
 
             <ng-container matColumnDef="size">
                 <th mat-header-cell *matHeaderCellDef> Quantidade de Alunos </th>
-                <td mat-cell *matCellDef="let cls"> {{classes.size}} </td>
+                <td mat-cell *matCellDef="let classes"> {{classes.size}} </td>
             </ng-container>
-        
+
             <ng-container matColumnDef="update">
                 <th mat-header-cell *matHeaderCellDef> Atualizar Dados </th>
-                <td mat-cell *matCellDef="let element">
+                <td mat-cell *matCellDef="let classes">
                    <button mat-icon-button>
                     <mat-icon>edit</mat-icon>
                   </button>
                 </td>
               </ng-container>
-    
+
+            <ng-container matColumnDef="delete">
+              <th mat-header-cell *matHeaderCellDef> Excluir Turma </th>
+              <td mat-cell *matCellDef="let classes">
+                <button mat-icon-button>
+                  <mat-icon>delete</mat-icon>
+                </button>
+              </td>
+            </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            
+
         </table>
-        <mat-paginator [pageSizeOptions]="[5, 10]"></mat-paginator>
-    
     </div>
 
     <div class="form-element">
-        <button mat-raised-button color="primary" type="submit" class="button" (click)="createClass()">Nova Turma</button>
+        <button mat-raised-button color="primary" type="submit" class="button" (click)="openDialog()">Adicionar Turma</button>
     </div>
 </div>
 
