--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,26 @@
+<div class="container">
+  <mat-card>
+    <mat-card-content>
+      <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <h2>Login</h2>
+        <mat-error *ngIf="loginInvalid">
+          Login ou senha inválidos
+        </mat-error>
+        <mat-form-field class="full-width-input">
+          <input matInput placeholder="Email" formControlName="login" required>
+          <mat-error>
+            Por favor, informe um endereço de email válido.
+          </mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width-input">
+          <input matInput type="password" placeholder="Password" formControlName="password" required>
+          <mat-error>
+            Por favor, informe uma senha válida.
+          </mat-error>
+        </mat-form-field>
+        <button mat-raised-button color="primary">Login</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
 
-<form [formGroup]="loginForm" class="my-form">
-    <div class="form-group">
-        <label>CPF</label>
-        <input type="text" class="form-control" formControlName="cpf" required>
-    </div>
-
-    <div class="form-group">
-        <label>Senha</label>
-        <input type="text" class="form-control" formControlName="password" required>
-    </div>
-
-    <div>
-        <input type="submit" class="btn btn-primary mt-4" value="Salvar">
-    </div>
-
-</form>
