--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,13 +1,17 @@
-body {
-    background-color: black;
+mat-card {
+  max-width: 400px;
+  margin: 2em auto;
+  text-align: center;
 }
 
-div {
-    text-align: left;
-    width: 300px;
+.container {
+  //display: flex;
+  //flex-direction: row;
+  //justify-content: center;
+  //align-items: center;
+  //width: 400px
 }
 
-.my-form {
-    margin-top: 20%;
-    margin-left: 50%;
+mat-form-field {
+  display: block;
 }
