--- a/src/app/admin-classes/admin-classes.component.html
+++ b/src/app/admin-classes/admin-classes.component.html
@@ -17,11 +17,6 @@
                 <td mat-cell *matCellDef="let classes"> {{classes.shift}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="size">
-                <th mat-header-cell *matHeaderCellDef> Quantidade de Alunos </th>
-                <td mat-cell *matCellDef="let classes"> {{classes.size}} </td>
-            </ng-container>
-
             <ng-container matColumnDef="update">
                 <th mat-header-cell *matHeaderCellDef> Atualizar Dados </th>
                 <td mat-cell *matCellDef="let classes">
@@ -34,7 +29,7 @@
             <ng-container matColumnDef="delete">
               <th mat-header-cell *matHeaderCellDef> Excluir Turma </th>
               <td mat-cell *matCellDef="let classes">
-                <button mat-icon-button>
+                <button mat-icon-button (click)="openDeleteDialog(classes)">
                   <mat-icon>delete</mat-icon>
                 </button>
               </td>
@@ -47,7 +42,7 @@
     </div>
 
     <div class="form-element">
-        <button mat-raised-button color="primary" type="submit" class="button" (click)="openDialog()">Adicionar Turma</button>
+        <button mat-raised-button color="primary" type="submit" class="button" (click)="openDialog(classes)">Adicionar Turma</button>
     </div>
 </div>
 
