--- a/src/app/traffic-ticket/traffic-ticket.component.html
+++ b/src/app/traffic-ticket/traffic-ticket.component.html
@@ -23,9 +23,14 @@
         <td mat-cell *matCellDef="let trafficTicket" class="gray-element"> {{trafficTicket.date | date: 'dd/MM/yyyy'}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef> Tipo </th>
+        <td mat-cell *matCellDef="let trafficTicket" class="gray-element"> {{trafficTicket.type}} </td>
+      </ng-container>
+
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef> Excluir Multa </th>
-        <td mat-cell *matCellDef="let trafficTicket">
+        <td mat-cell *matCellDef="let trafficTicket" gray-element>
           <button mat-icon-button (click)="openDeleteDialog(trafficTicket)">
             <mat-icon>delete</mat-icon>
           </button>
@@ -37,6 +42,6 @@
 
     </table>
   </div>
-  <button mat-raised-button color="primary" (click)='openDialog()' type="submit" class="button">Adicionar nova multa</button>
+  <button mat-raised-button color="primary" (click)='openDialog()' class="button">Adicionar nova multa</button>
 
 </div>
