--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,14 +13,16 @@
           </mat-error>
         </mat-form-field>
         <mat-form-field class="full-width-input">
-          <input matInput type="password" placeholder="Password" formControlName="password" required>
+          <input matInput type="password" placeholder="Senha" formControlName="password" required>
           <mat-error>
             Por favor, informe uma senha válida.
           </mat-error>
         </mat-form-field>
-        <button mat-raised-button color="primary">Login</button>
+        <button mat-raised-button color="primary">Entrar</button>
       </form>
     </mat-card-content>
   </mat-card>
 </div>
+<router-outlet></router-outlet>
+
 
