--- a/src/app/admin-franquias/admin-franquias.component.html
+++ b/src/app/admin-franquias/admin-franquias.component.html
@@ -4,23 +4,23 @@
         <table mat-table matSort class="table" [dataSource]="dataSource">
             <ng-container matColumnDef="Id">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
-                <td mat-cell *matCellDef="let school"> {{school.id}} </td>
+                <td mat-cell *matCellDef="let franchise"> {{franchise.id}} </td>
             </ng-container>
 
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
-                <td mat-cell *matCellDef="let school"> {{school.name}}
+                <td mat-cell *matCellDef="let franchise"> {{franchise.name}}
                 </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-            <ng-container matColumnDef="update">
-                <th class="w-25" mat-header-cell *matHeaderCellDef> Atualizar Dados </th>
-                <td mat-cell *matCellDef="let school">
-                   <button mat-icon-button>
-                    <mat-icon>edit</mat-icon>
+            <ng-container matColumnDef="delete">
+                <th class="w-25" mat-header-cell *matHeaderCellDef> Deletar Franquia </th>
+                <td mat-cell *matCellDef="let franchise">
+                   <button mat-icon-button (click)="openDeleteDialog(franchise)">
+                    <mat-icon>delete</mat-icon>
                   </button>
                 </td>
             </ng-container>
@@ -31,5 +31,5 @@
 
 
 <div class="form-element">
-    <button mat-raised-button color="primary" type="submit" class="button" (click)="openDialog()">Nova Franquia</button>
+    <button mat-flat-button color="primary" type="submit" class="button" (click)="openDialog()">Nova Franquia</button>
 </div>
