--- a/src/app/admin-franquias/admin-franquias.component.scss
+++ b/src/app/admin-franquias/admin-franquias.component.scss
@@ -35,9 +35,14 @@ button {
     text-align: center;
 }
 
-.mat-raised-button {
+.mat-flat-button:hover {
+  transform: scale(1.1);
+}
+
+.mat-flat-button {
     background-color: #FFD700;
     color: #000;
     margin-left: 15%;
     margin-top: 2%;
+    transition: transform .4s;
 }
