--- a/src/app/delete-dialog/delete-dialog.component.html
+++ b/src/app/delete-dialog/delete-dialog.component.html
@@ -27,6 +27,11 @@
     <h1 mat-dialog-title>Deseja excluir aluno da turma?</h1>
     <!--    <p mat-dialog-content >{{this.localData.name}}</p>-->
   </div>
+  <div *ngIf="this.type == 'admin-franquia'">
+    <h1 mat-dialog-title>ATENÇÃO: Deseja excluir essa franquia ? Isso deletará todos os dados relacionados à franquia.
+      Dados como alunos, funcionários, instrutores, aulas e turmas serão permanentemente apagados do sistema.</h1>
+    <!--    <p mat-dialog-content >{{this.localData.name}}</p>-->
+  </div>
   <div mat-dialog-actions>
     <button mat-button mat-flat-button type="submit" color="warn" (click)="onSubmit()">Deletar</button>
     <button mat-button (click)="closeDialog()">Cancelar</button>
