--- a/src/app/main-nav/main-nav.component.scss
+++ b/src/app/main-nav/main-nav.component.scss
@@ -39,7 +39,7 @@ mat-expansion-panel-header:hover {
     background-color: #FFD700;
 }
 
-.h4 {
+h4 {
     margin-bottom: .5rem;
     font-family: inherit;
     font-weight: 700;
@@ -48,8 +48,7 @@ mat-expansion-panel-header:hover {
     text-align: left!important;
     white-space: normal!important;
     width: 100%!important;
-
-    margin-top: 50px;
+    margin-left: 10px;
     font-size: 1rem;
     line-height: 1.5;
 }
