--- a/src/app/tabela-pratica/tabela-pratica.component.html
+++ b/src/app/tabela-pratica/tabela-pratica.component.html
@@ -1,1 +1,191 @@
-<p>tabela-pratica works!</p>
+<div>
+    <h2>{{this.table.name}}</h2>
+    <h4>Instrutor Relacionado: {{this.instructor.name}}</h4>
+  <div class="mat-elevation-z8 data-table">
+    <table mat-table matSort class="table" [dataSource]="dataSource">
+
+        <ng-container matColumnDef="header-row-first-group" class="header">
+          <th mat-header-cell *matHeaderCellDef
+              [style.text-align]="center"
+              [attr.colspan]="1">
+            Horário
+          </th>
+        </ng-container>
+
+        <ng-container matColumnDef="header-row-second-group" class="header">
+          <th mat-header-cell *matHeaderCellDef [attr.colspan]="3"> Segunda </th>
+        </ng-container>
+
+        <ng-container matColumnDef="header-row-third-group" class="header">
+          <th mat-header-cell *matHeaderCellDef [attr.colspan]="3"> Terça </th>
+        </ng-container>
+
+        <ng-container matColumnDef="header-row-fourth-group" class="header">
+          <th mat-header-cell *matHeaderCellDef [attr.colspan]="3"> Quarta </th>
+        </ng-container>
+
+        <ng-container matColumnDef="header-row-fifth-group" class="header">
+          <th mat-header-cell *matHeaderCellDef [attr.colspan]="3"> Quinta </th>
+        </ng-container>
+
+        <ng-container matColumnDef="header-row-sixth-group" class="header">
+          <th mat-header-cell *matHeaderCellDef [attr.colspan]="3"> Sexta </th>
+        </ng-container>
+
+        <ng-container matColumnDef="hour">
+          <th mat-header-cell *matHeaderCellDef> </th>
+          <td mat-cell *matCellDef="let line; let i = index" class="gray-element" (click)="openDialog(line.hour, i,'hour', 'hour')">
+            {{line.hour}}
+          </td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+
+        <ng-container matColumnDef="name1">
+          <th mat-header-cell *matHeaderCellDef> Aluno </th>
+          <td mat-cell *matCellDef="let line; let i = index" class="gray-element" (click)="openDialog(line.student1, i, 'student1', 'student')">
+            {{line.student1}}
+          </td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+
+        <ng-container matColumnDef="check1">
+          <th mat-header-cell *matHeaderCellDef class="size"> Check </th>
+          <td mat-cell *matCellDef="let line" class="gray-element">
+            <mat-checkbox [(ngModel)]="line.check1" (change)="this.changeCheck(line)"></mat-checkbox>
+          </td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
+
+        <ng-container matColumnDef="km1">
+          <th mat-header-cell *matHeaderCellDef class="size2"> Km </th>
+          <td mat-cell *matCellDef="let line ; let i = index" class="gray-element" (click)="openDialog(line.km1, i,'km1', 'km')">
+            {{line.km1}}
+          </td>
+          <td mat-footer-cell *matFooterCellDef>Soma: {{this.table.sum1}}</td>
+        </ng-container>
+
+      <ng-container matColumnDef="name2">
+        <th mat-header-cell *matHeaderCellDef> Aluno </th>
+        <td mat-cell *matCellDef="let line ; let i = index" class="gray-element" (click)="openDialog(line.student2, i, 'student2', 'student')">
+          {{line.student2}}
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <ng-container matColumnDef="check2">
+        <th mat-header-cell *matHeaderCellDef class="size"> Check </th>
+        <td mat-cell *matCellDef="let line" class="gray-element">
+          <mat-checkbox [(ngModel)]="line.check2" (change)="this.changeCheck(line)"></mat-checkbox>
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <ng-container matColumnDef="km2">
+        <th mat-header-cell *matHeaderCellDef class="size2"> Km </th>
+        <td mat-cell *matCellDef="let line ; let i = index" class="gray-element" (click)="openDialog(line.km2, i,'km2', 'km')">
+          {{line.km2}}
+        </td>
+        <td mat-footer-cell *matFooterCellDef>Soma: {{this.table.sum2}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="name3">
+        <th mat-header-cell *matHeaderCellDef> Aluno </th>
+        <td mat-cell *matCellDef="let line ; let i = index" class="gray-element" (click)="openDialog(line.student3, i,'student3', 'student')">
+          {{line.student3}}
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <ng-container matColumnDef="check3">
+        <th mat-header-cell *matHeaderCellDef class="size"> Check </th>
+        <td mat-cell *matCellDef="let line" class="gray-element">
+          <mat-checkbox [(ngModel)]="line.check3" (change)="this.changeCheck(line)"></mat-checkbox>
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <ng-container matColumnDef="km3">
+        <th mat-header-cell *matHeaderCellDef class="size2"> Km </th>
+        <td mat-cell *matCellDef="let line ; let i = index" class="gray-element" (click)="openDialog(line.km3, i,'km3', 'km')">
+          {{line.km3}}
+        </td>
+        <td mat-footer-cell *matFooterCellDef>Soma: {{this.table.sum3}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="name4">
+        <th mat-header-cell *matHeaderCellDef> Aluno </th>
+        <td mat-cell *matCellDef="let line ; let i = index" class="gray-element" (click)="openDialog(line.student4, i,'student4', 'student')">
+          {{line.student4}}
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <ng-container matColumnDef="check4">
+        <th mat-header-cell *matHeaderCellDef class="size"> Check </th>
+        <td mat-cell *matCellDef="let line" class="gray-element">
+          <mat-checkbox [(ngModel)]="line.check4" (change)="this.changeCheck(line)"></mat-checkbox>
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <ng-container matColumnDef="km4">
+        <th mat-header-cell *matHeaderCellDef class="size2"> Km </th>
+        <td mat-cell *matCellDef="let line ; let i = index" class="gray-element" (click)="openDialog(line.km4, i,'km4', 'km')">
+          {{line.km4}}
+        </td>
+        <td mat-footer-cell *matFooterCellDef>Soma: {{this.table.sum4}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="name5">
+        <th mat-header-cell *matHeaderCellDef> Aluno </th>
+        <td mat-cell *matCellDef="let line ; let i = index" class="gray-element" (click)="openDialog(line.student5, i,'student5', 'student')">
+          {{line.student5}}
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <ng-container matColumnDef="check5">
+        <th mat-header-cell *matHeaderCellDef class="size"> Check </th>
+        <td mat-cell *matCellDef="let line" class="gray-element">
+          <mat-checkbox [(ngModel)]="line.check5" (change)="this.changeCheck(line)"></mat-checkbox>
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <ng-container matColumnDef="km5">
+        <th mat-header-cell *matHeaderCellDef class="size2"> Km </th>
+        <td mat-cell *matCellDef="let line ; let i = index" class="gray-element" (click)="openDialog(line.km5, i,'km5', 'km')">
+          {{line.km5}}
+        </td>
+        <td mat-footer-cell *matFooterCellDef>Soma: {{this.table.sum5}}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef class="size"> Excluir Linha </th>
+        <td mat-cell *matCellDef="let line">
+          <button mat-icon-button (click)="openDeleteDialog(line)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="['header-row-first-group', 'header-row-second-group', 'header-row-third-group',
+      'header-row-fourth-group', 'header-row-fifth-group', 'header-row-sixth-group']"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+</div>
+<div class="button-table">
+  <table>
+    <tr>
+      <td>
+        <div>
+          <button mat-flat-button style="background-color: #FFD700;" type="submit" (click)="createNewLine()" class="button">Adicionar nova linha</button>
+        </div>
+      </td>
+    </tr>
+  </table>
+</div>
